src/objects/CP_Application_Request__c.object
<CustomObject>
    <fields>
        <fullName>Phone_Number_Check__c</fullName>
        <label>Phone Number Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Physical_Address_Line_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Physical Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Address_Line_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Physical Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Physical_Postal_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_State_Province__c</fullName>
        <label>State / Province</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Physical_Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AB</fullName>
                </value>
                <value>
                    <fullName>BC</fullName>
                </value>
                <value>
                    <fullName>MB</fullName>
                </value>
                <value>
                    <fullName>NB</fullName>
                </value>
                <value>
                    <fullName>NL</fullName>
                </value>
                <value>
                    <fullName>NT</fullName>
                </value>
                <value>
                    <fullName>NS</fullName>
                </value>
                <value>
                    <fullName>NU</fullName>
                </value>
                <value>
                    <fullName>ON</fullName>
                </value>
                <value>
                    <fullName>PE</fullName>
                </value>
                <value>
                    <fullName>QC</fullName>
                </value>
                <value>
                    <fullName>SK</fullName>
                </value>
                <value>
                    <fullName>YT</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Physical_State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>US_States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Physical_Street_Address__c</fullName>
        <formula>Physical_Address_Line_1__c &amp; &quot; &quot; &amp; Physical_Address_Line_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Physical Street Address (No Po Boxes)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prepaid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prepaid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_Fraud__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If an application found via existing exposure check has the fraud flag set to true</inlineHelpText>
        <label>Previous Fraud</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Admin_Phone__c</fullName>
        <formula>SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(Business_Phone__c, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Admin Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Administrator__c</fullName>
        <formula>First_Name__c + &quot; &quot; + Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Administrator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_WF_TEXT__c</fullName>
        <description>This is populated by a field update with the program name so that sharing rules can be built off this value.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Program WF TEXT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>CorporatePayments Application Requests</relationshipLabel>
        <relationshipName>CorporatePayments_Application_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Projected_Monthly_Spend__c</fullName>
        <label>Projected Monthly Spend</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recourse_Code__c</fullName>
        <label>Recourse Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>W0 - Deposit</fullName>
                </value>
                <value>
                    <fullName>LC - Letter of Credit</fullName>
                </value>
                <value>
                    <fullName>DV - Divvy Partner Recourse</fullName>
                </value>
                <value>
                    <fullName>PG - Personal Guaranty</fullName>
                </value>
                <value>
                    <fullName>CG - Corporate Guaranty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recourse_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Recourse Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recourse_Status__c</fullName>
        <label>Recourse Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Recourse 1</fullName>
                </value>
                <value>
                    <fullName>Recourse 2</fullName>
                </value>
                <value>
                    <fullName>Recourse 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_Grade_Source__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Risk Grade Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Grade__c</fullName>
        <label>Risk Grade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>995</fullName>
                    <isActive>false</isActive>
                    <label>995</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Running_Credit_Decisioning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Running Credit Decisioning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SIC Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CorporatePayments_Application_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Territory_2__c</fullName>
        <formula>&quot;10&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Territory 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sanctions_Business_Check__c</fullName>
        <label>Sanctions Business Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sanctions_Business_Result_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sanctions Business Result ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sanctions_Check__c</fullName>
        <label>Sanctions Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sanctions_Individual_Check__c</fullName>
        <label>Sanctions Individual Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sanctions_Individual_Result_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sanctions Individual Result ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Satisfactory_Trades__c</fullName>
        <label>Satisfactory Trades</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Security_Statement_on_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Fraud Indicator returned from Experian</inlineHelpText>
        <label>Security Statement on Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Social_Security_Check__c</fullName>
        <label>Social Security Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <formula>TEXT(Physical_State_Province__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State / Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Application_Stage__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>App - Incomplete</fullName>
                </value>
                <value>
                    <fullName>Application Complete</fullName>
                </value>
                <value>
                    <fullName>Application Incomplete</fullName>
                </value>
                <value>
                    <fullName>Audit Complete</fullName>
                </value>
                <value>
                    <fullName>Cards Produced</fullName>
                </value>
                <value>
                    <fullName>Cards Shipped</fullName>
                </value>
                <value>
                    <fullName>Closed/Lost</fullName>
                </value>
                <value>
                    <fullName>Decisioned</fullName>
                </value>
                <value>
                    <fullName>Disqualified</fullName>
                </value>
                <value>
                    <fullName>Implementation Complete</fullName>
                </value>
                <value>
                    <fullName>Pending BOCDD</fullName>
                </value>
                <value>
                    <fullName>Pending Decision</fullName>
                </value>
                <value>
                    <fullName>Pending Implementation</fullName>
                </value>
                <value>
                    <fullName>Pending Recourse</fullName>
                </value>
                <value>
                    <fullName>Pending Setup</fullName>
                </value>
                <value>
                    <fullName>Pending Setup Data</fullName>
                </value>
                <value>
                    <fullName>Pending Setup-Generic</fullName>
                </value>
                <value>
                    <fullName>Prefill in Progress</fullName>
                </value>
                <value>
                    <fullName>Saved - Complete</fullName>
                </value>
                <value>
                    <fullName>Saved - Incomplete</fullName>
                </value>
                <value>
                    <fullName>Saved - PaperApp</fullName>
                </value>
                <value>
                    <fullName>Saved - Rereview</fullName>
                </value>
                <value>
                    <fullName>Sent to Prospect</fullName>
                </value>
                <value>
                    <fullName>Setup Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tandem_Credit_Line_Type2__c</fullName>
        <formula>CASE(Credit_Approval_Code__c, 

&quot;Financials&quot;, &quot;F&quot;, 
&quot;Commercial Credit&quot;, &quot;O&quot;, 
&quot;Divvy Recourse&quot;, &quot;DV&quot;, 
&quot;Prepay&quot;, &quot;PP&quot;, 
&quot;Personal Guaranty&quot;, &quot;PG&quot;, 
&quot;Deposit&quot;, &quot;DP&quot;, 
&quot;Letter of Credit&quot;, &quot;LC&quot;, 
&quot;Corporate Guaranty&quot;, &quot;CG&quot;, 
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tandem Credit Line Type2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taxpayer_ID__c</fullName>
        <label>Taxpayer ID</label>
        <length>10</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Terms__c</fullName>
        <formula>CASE(Billing_Cycle__c,

&quot;Daily&quot;, &quot;5XW&quot;,
&quot;Weekly&quot;, &quot;1XW&quot;,
&quot;Bi-Weekly&quot;, &quot;2XM&quot;,
&quot;Monthly&quot;, &quot;1XM&quot;,
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThreatMetrix_Check__c</fullName>
        <label>ThreatMetrix Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ThreatMetrix_Request_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ThreatMetrix Request ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThreatMetrix_Result__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ThreatMetrix Result</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThreatMetrix_Session_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ThreatMetrix Session ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>President</fullName>
                </value>
                <value>
                    <fullName>CFO</fullName>
                </value>
                <value>
                    <fullName>CEO</fullName>
                </value>
                <value>
                    <fullName>COO</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Vice President</fullName>
                </value>
                <value>
                    <fullName>Treasurer</fullName>
                </value>
                <value>
                    <fullName>Founder</fullName>
                </value>
                <value>
                    <fullName>Co-Founder</fullName>
                </value>
                <value>
                    <fullName>Other officer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>View_Existing_Exposure__c</fullName>
        <formula>HYPERLINK(&apos;/apex/CreditExistingExposure?id=&apos; + Id, &apos;View Matches&apos;, &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Existing Exposure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WEX_Collection_Analyst_2__c</fullName>
        <formula>&quot;CW&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WEX Collection Analyst 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WEX_Credit_NID__c</fullName>
        <formula>National__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WEX Credit NID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WEX_Match_Score__c</fullName>
        <label>WEX Match Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_Started__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Year Started</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Years_in_Business__c</fullName>
        <label>Years in Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 12 months</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CorporatePayments Application Request</label>
    <listViews>
        <fullName>All_Applications</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Application_Stage__c</columns>
        <columns>Program__c</columns>
        <columns>NAME</columns>
        <columns>Credit_Decision__c</columns>
        <columns>Company_Legal_Name__c</columns>
        <columns>Credit_Analyst__c</columns>
        <columns>Credit_Line_Requested__c</columns>
        <columns>Credit_Line_Approved__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Sales_Rep__c</columns>
        <columns>DNB_Score__c</columns>
        <columns>DUNS_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Stage__c</field>
            <operation>equals</operation>
            <value>Application,Adjudication,Credit Follow-up,Implementation</value>
        </filters>
        <label>All Applications</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_CP_Applications_Pending_Compliance</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Company_Legal_Name__c</columns>
        <columns>Program__c</columns>
        <columns>Application_Stage__c</columns>
        <columns>Sanctions_Check__c</columns>
        <columns>Sanctions_Business_Check__c</columns>
        <columns>Sanctions_Business_Result_ID__c</columns>
        <columns>Sanctions_Individual_Check__c</columns>
        <columns>Sanctions_Individual_Result_ID__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Stage__c</field>
            <operation>equals</operation>
            <value>Adjudication,Credit Follow-up</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending Decision</value>
        </filters>
        <filters>
            <field>Sanctions_Check__c</field>
            <operation>equals</operation>
            <value>Failed,Error</value>
        </filters>
        <filters>
            <field>Compliance_Decision__c</field>
            <operation>equals</operation>
        </filters>
        <label>6. Compliance Review Queue</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_CP_Applications_Pending_Fraud</fullName>
        <booleanFilter>(1 or 3 or 4 or 5) and 2</booleanFilter>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Company_Legal_Name__c</columns>
        <columns>Program__c</columns>
        <columns>Application_Stage__c</columns>
        <columns>Fraud_Recommendation__c</columns>
        <columns>Phone_Number_Check__c</columns>
        <columns>Social_Security_Check__c</columns>
        <columns>ThreatMetrix_Check__c</columns>
        <columns>Credit_Decision__c</columns>
        <columns>Previous_Fraud__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Fraud_Recommendation__c</field>
            <operation>equals</operation>
            <value>Recommend Review,Recommend Decline</value>
        </filters>
        <filters>
            <field>Fraud_Decision__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Phone_Number_Check__c</field>
            <operation>equals</operation>
            <value>Failed,Error</value>
        </filters>
        <filters>
            <field>Social_Security_Check__c</field>
            <operation>equals</operation>
            <value>Failed,Error</value>
        </filters>
        <filters>
            <field>ThreatMetrix_Check__c</field>
            <operation>equals</operation>
            <value>Failed,Error</value>
        </filters>
        <label>5. Fraud Review Queue</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Approved_Applications</fullName>
        <columns>Complete__c</columns>
        <columns>Application_Decisioned_Date__c</columns>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Company_Legal_Name__c</columns>
        <columns>Application_Stage__c</columns>
        <columns>Credit_Decision__c</columns>
        <columns>Credit_Decision_Comments__c</columns>
        <columns>Credit_Line_Approved__c</columns>
        <columns>Credit_Line_Requested__c</columns>
        <columns>Credit_Analyst__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Stage__c</field>
            <operation>equals</operation>
            <value>Adjudication,Implementation</value>
        </filters>
        <filters>
            <field>Credit_Decision__c</field>
            <operation>equals</operation>
            <value>Approved - Counter Offer,Approved</value>
        </filters>
        <label>3. Approved Applications</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Apps_Not_Submitted_to_Bank</fullName>
        <columns>NAME</columns>
        <columns>Application_Stage__c</columns>
        <columns>Program__c</columns>
        <columns>Company_Legal_Name__c</columns>
        <columns>Credit_Decision__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Stage__c</field>
            <operation>equals</operation>
            <value>Application</value>
        </filters>
        <label>Apps Not Submitted to Bank</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Declined_Applications</fullName>
        <columns>Complete__c</columns>
        <columns>Application_Decisioned_Date__c</columns>
        <columns>NAME</columns>
        <columns>Company_Legal_Name__c</columns>
        <columns>Program__c</columns>
        <columns>Application_Stage__c</columns>
        <columns>Status__c</columns>
        <columns>Credit_Decision__c</columns>
        <columns>Credit_Decision_Comments__c</columns>
        <columns>Credit_Analyst__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Credit_Line_Requested__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Credit_Decision__c</field>
            <operation>equals</operation>
            <value>Declined,Declined - Prepay/Secured Only</value>
        </filters>
        <filters>
            <field>Application_Stage__c</field>
            <operation>equals</operation>
            <value>Adjudication</value>
        </filters>
        <label>2. Declined Applications</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Fraud_Decline</fullName>
        <columns>NAME</columns>
        <columns>Company_Legal_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Adverse_Action_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Stage__c</field>
            <operation>equals</operation>
            <value>Adjudication</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Decisioned</value>
        </filters>
        <filters>
            <field>Fraud_Decision__c</field>
            <operation>equals</operation>
            <value>Declined</value>
        </filters>
        <filters>
            <field>Adverse_Action_Code__c</field>
            <operation>equals</operation>
        </filters>
        <label>Internal Review F7</label>
        <language>en_US</language>
        <sharedTo>
            <role>Credit</role>
        </sharedTo>
    </listViews>
</CustomObject>